feat: tag AI 구현